--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -15,6 +15,7 @@
 <h2>Comments</h2>
 <%= render @article.comments %>
 
-
 <h2>Add a comment:</h2>
-<%= render 'comments/form' %>
+<%= render 'comments/from' %>
+
+
