--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -1,2 +1,14 @@
-<%= text_field :person, :email %>
-<%= text_field :person, :email_confirmation %>
+<%= text_field :people, :email %>
+<%= text_field :people, :email_confirmation %>
+
+
+<h1>Names of all the people</h1>
+<% @person.each do |person| %>
+  Name: <%= person.name %><br>
+<% end %>
+
+<!--Hi, Mr. <%#= puts "Frodo" %> will not work-->
+
+
+<%= render "menu" %>
+<!--<%#= render "shared/menu" %>  from a shared folder-->
