Action view overview

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -18,3 +18,9 @@
 <%= render 'comments/from' %>
 
 
+<%#= render partial: 'article', layout: 'box', locals: { article: @article } %>
+<!--The box layout simply wraps the _article partial in a div:-->
+<!--articles/_box.html.erb-->
+<!--<div class='box'>-->
+  <%#= yield %>
+<!--</div>-->
