Layouts and REndering in Rails

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,8 @@
+
+<% content_for :head do %>
+  <title>A simple page</title>
+<% end %>
+
 <h1><%= @article.title %></h1>
 
 <p><%= @article.body %></p>
