--- a/app/views/news/show.html.erb
+++ b/app/views/news/show.html.erb
@@ -1,3 +1,8 @@
+
+<% content_for :head do %>
+  <title>A simple page</title>
+<% end %>
+
 <p id="notice"><%= notice %></p>
 
 <%= link_to 'Edit', edit_news_path(@news) %> |
