Authentication With device

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -7,7 +7,7 @@
 <%# end %>
 
 <%= simple_form_for @article do |f| %>
-  <%= f.input :title, label: 'Title', hint: 'No special characters.', disabled: true, error: 'Title is mandatory, please specify one', placeholder: 'Update title here' %>
+  <%= f.input :title, label: 'Title', hint: 'No special characters.', error: 'Title is mandatory, please specify one', placeholder: 'Update title here' %>
   <%= f.input :body ,placeholder: 'Update body here' %>
   <%= f.select :status, ['public', 'private', 'archived'], selected: 'public' %>
   <%= f.button :submit %>
